tests/ui/unsafe/ranged-ctor-as-fn-ptr.stderr
error[E0308]: mismatched types
  --> $DIR/ranged-ctor-as-fn-ptr.rs:8:40
   |
LL |     let x: fn(u8) -> NonZeroAndOneU8 = NonZeroAndOneU8;
   |            -------------------------   ^^^^^^^^^^^^^^^ expected safe fn, found unsafe fn
   |            |
   |            expected due to this
   |
   = note:      expected fn pointer `fn(_) -> NonZeroAndOneU8`
           found struct constructor `unsafe fn(_) -> NonZeroAndOneU8 {NonZeroAndOneU8}`
   = note: unsafe functions cannot be coerced into safe function pointers

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
